--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             </div>
             <div class="nosotros__flex--container">
                 <h3>Nosotros</h3>
-                <a href="">Inicio</a>
-                <a href="">Productos</a>
-                <a href="">Ubicacion</a>
-                <a href="">Contacto</a>
+                <a href="./index.html">Inicio</a>
+                <a href="./pages/productos.html">Productos</a>
+                <a href="./pages/ubicacion.html">Ubicacion</a>
+                <a href="./pages/contacto.html">Contacto</a>
             </div>
             <div class="redes__flex--container">
                 <h3>Contacto</h3>
