--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Original_Adidas_logo.svg/2077px-Original_Adidas_logo.svg.png" alt="" class="headerLogo">
                     </div>
                     <div class="header__flex--container">
-                        <li><a href="">Inicio</a></li>
-                        <li><a href="">Productos</a></li>
-                        <li><a href="">Ubicacion</a></li>
-                        <li><a href="">Contacto</a></li>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./pages/productos.html">Productos</a></li>
+                        <li><a href="./pages/ubicacion.html">Ubicacion</a></li>
+                        <li><a href="./pages/contacto.html">Contacto</a></li>
                     </div>
                 </div>
             </ul>
