Cambios de diseño y añadido de inputs

--- a/index.html
+++ b/index.html
@@ -64,8 +64,17 @@
                 <a href=""><img src="https://images.unsplash.com/photo-1613053342692-d0012e0444eb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=735&q=80" alt=""></a>
             </section>
         </div>
+        <div class="index__button">
+            <a href="./pages/productos.html"><button class="cta">
+            <span class="hover-underline-animation"> IR A PRODUCTOS </span>
+            <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
+            <path transform="translate(30)" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10" id="Path_10"></path>
+            </svg>
+            </button></a>
+        </div>
     </main>
     <footer>
+        <img src="https://en.bloomingdales.sa/on/demandware.static/-/Library-Sites-BloomingDalesSharedLibrary/default/dw69be0108/FINAL-IMAGES/BRAND-HEADERS/desktop-brand/adidas.jpg" alt="" class="footer__banner">
         <div class="footer__flex--container">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Original_Adidas_logo.svg/2077px-Original_Adidas_logo.svg.png" alt="" class="headerLogo">
         </div>
