--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,8 +33,10 @@
         <fieldset class="form__flex--container">
             <input type="text" name="" id="" placeholder="First Name">
             <input type="text" name="" id="" placeholder="Last name">
+            <input type="date" name="" id="" placeholder="Date of birth">
         </fieldset>
         <fieldset class="form__flex--container">
+            <input type="email" name="" id="" placeholder="Direccion">
             <input type="email" name="" id="" placeholder="E-Mail">
         </fieldset>
         <fieldset class="form__flex--container">
